--- a/app/src/main/res/layout/fragment_routines.xml
+++ b/app/src/main/res/layout/fragment_routines.xml
@@ -19,4 +19,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddRoutine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/baseline_add_24"
+        style="@style/FloatingActionButtonStyle"
+        android:contentDescription="@string/add_routine" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
