--- a/app/src/main/res/layout/item_logged_workout.xml
+++ b/app/src/main/res/layout/item_logged_workout.xml
@@ -66,6 +66,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvLogCardExercises"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
