--- a/app/src/main/res/menu/toolbar_menu_routine.xml
+++ b/app/src/main/res/menu/toolbar_menu_routine.xml
@@ -2,8 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/miSave"
+    <item android:id="@+id/miSaveRoutine"
         android:title="Save"
         app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/miStart"
+        android:title="Start"
+        app:showAsAction="always"/>
 
 </menu>
