--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,14 @@
     <style name="FabShapeStyle" parent="ShapeAppearance.Material3.SmallComponent">
         <item name="cornerSize">25%</item>
     </style>
+
+    <style name="AppTheme.FullScreenDialog" parent="Theme.Material3.DayNight.Dialog">
+        <item name="colorPrimaryDark">@color/purple_500</item>
+        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/black</item>
+        <item name="actionMenuTextColor">@color/teal_200</item>
+    </style>
+
 </resources>
