--- a/app/src/main/res/navigation/workout_organizer_nav_graph.xml
+++ b/app/src/main/res/navigation/workout_organizer_nav_graph.xml
@@ -41,6 +41,9 @@
         <action
             android:id="@+id/action_routineFragment_to_workoutFragment"
             app:destination="@id/workoutFragment" />
+        <action
+            android:id="@+id/action_routineFragment_to_editRoutineSetFragment"
+            app:destination="@id/editRoutineSetFragment" />
     </fragment>
     <fragment
         android:id="@+id/categoriesFragment"
@@ -69,6 +72,14 @@
         <argument
             android:name="loggedWorkoutRoutine"
             app:argType="com.nejj.workoutorganizerapp.models.relations.LoggedWorkoutRoutineWithLoggedRoutineSets" />
+    </fragment>
+    <fragment
+        android:id="@+id/editRoutineSetFragment"
+        android:name="com.nejj.workoutorganizerapp.ui.fragment.EditRoutineSetFragment"
+        android:label="EditRoutineSetFragment" >
+        <argument
+            android:name="routineSet"
+            app:argType="com.nejj.workoutorganizerapp.models.RoutineSet" />
     </fragment>
 
 </navigation>
