--- a/app/src/main/res/layout/item_logged_workout.xml
+++ b/app/src/main/res/layout/item_logged_workout.xml
@@ -49,6 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="0dp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -60,7 +62,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:clickable="false"
+            android:focusable="false">
 
             <TextView
                 android:id="@+id/tvWorkoutTitle"
@@ -74,7 +78,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvLogCardExercises"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:focusable="false">
 
             </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
